[post] Python 3.5 in Fedora

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Matt Stuchlik
+title:               Matej Stuchlik
 tagline:             'Without tagline'
 url:                 http://synfo.github.io
 paginate:            1
